[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "archivist"
authors = [{name = "Raffael Thome", email = "mail@rmt.name"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.12"
dependencies = [
    "click >=8.1"
]

[project.urls]
Home = "https://rmt.name"

[project.scripts]
archivist = "archivist.cli:cli"
